Utworzono klasę Character